<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator_0</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount</string>
    <string name="custom_tip_percentage">Custom%</string>
    <string name="f15_percent">15%</string>
    <string name="e18_perrcent">18%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>

</resources>
