<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:columnCount="2"
    android:id="@+id/gridLayout"
    android:useDefaultMargins="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/amount"
        android:id="@+id/amountTextView"
        android:layout_gravity="end"
        android:labelFor="@+id/amountEditText " />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amountEditsText"
        android:maxLength="6"
        android:inputType="number"
        android:digits="0123456789" />

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountDisplayTextView"
        android:layout_row="0"
        android:layout_column="1"
        android:gravity="fill_horizontal"
        android:background="@android:color/holo_blue_bright"
        android:clickable="false"
        android:padding="@dimen/textview_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/custom_tip_percentage"
        android:id="@+id/customPercentTextView"
        android:gravity="center_vertical|end"
        android:layout_gravity="end" />

    <SeekBar
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/customTipSeekBar"
        android:max="30"
        android:progress="18" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:id="@+id/percentLinearLayout"
        android:layout_column="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/f15_percent"
            android:id="@+id/percent15TextView"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/e18_perrcent"
            android:id="@+id/percentCustomTextView"
            android:layout_weight="1"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tip"
        android:id="@+id/tipTextView"
        android:gravity="end"
        android:layout_gravity="end" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:id="@+id/tipLinearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tip15TextView"
            android:background="@android:color/holo_orange_light"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/textview_padding"
            android:layout_marginEnd="@dimen/textview_margin" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tipCustomTextView"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_gravity="center"
            android:padding="@dimen/textview_padding" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total"
        android:id="@+id/totalTextView"
        android:layout_gravity="end" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:id="@+id/totalLinearLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/total15TextView"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:layout_marginRight="@dimen/textview_margin"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/textview_padding" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/totalCustomTextView"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="@dimen/textview_margin"
            android:background="@android:color/holo_orange_light"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>


</GridLayout>
